<resources>
    <string name="app_name">E-Traceability</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Menu String-->
    <string name="pond">Pond Details</string>
    <string name="animal">Animal Details</string>
    <string name="monitioring"> Monitoring Performance</string>
    <string name="commercial">Commercial Input</string>
    <string name="harvest"> Harvest </string>
    <string name="store">Store</string>
    <string name="profile">Profile</string>
</resources>
