<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pound"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/pond" />
        <item
            android:id="@+id/nav_details"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/animal" />
        <item
            android:id="@+id/nav_monitoring"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/monitioring" />
        <item
            android:id="@+id/nav_commercial"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/commercial" />
        <item
            android:id="@+id/nav_harvest"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/harvest" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/store" />


    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_menu_share"
                android:title="Signout" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_send"
                android:title="Exit" />
        </menu>
    </item>

</menu>
